--- a/src/components/AboutCards/AboutCards.scss
+++ b/src/components/AboutCards/AboutCards.scss
@@ -1,78 +1,86 @@
 @use "../../styles/partials/colors" as *;
 @use "../../styles/partials/mixins" as *;
 
-.about-cards{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    padding: 2rem;
-    width: 5rem;
-    height: 5em;
-    background-color: $background-secondary;
+.about-cards {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  padding: 2rem;
+  width: 3.5rem;
+  height: 3.5rem;
+  background-color: $background-secondary;
 
-    @include tablet{
-        width: 6rem;
-        height: 6rem;
+  @include tablet {
+    width: 4.5rem;
+    height: 4.5rem;
+  }
+
+  @include desktop {
+    width: 6.5rem;
+    height: 6.5rem;
+  }
+
+  @include desktop-xl {
+    width: 8rem;
+    height: 8rem;
+  }
+
+  &__logo {
+    width: 3rem;
+
+    @include tablet {
+      width: 4rem;
+      height: 4rem;
     }
-
-    @include desktop{
-        width: 8rem;
-        height: 8rem;
+    @include desktop {
+      width: 5.5rem;
+      height: 5.5rem;
     }
-
-    &__logo{
-        width: 4rem;
-
-        @include tablet{
-            width: 5rem;
-            height: 5rem;
-        }
-        @include desktop{
-            width: 6.5rem;
-            height: 6.5rem;
-        }
+    @include desktop-xl {
+      width: 6.5rem;
+      height: 6.5rem;
     }
+  }
 
-    &:hover{
-        transition: 0.3s ease;
-        background-color: rgba(74, 74, 74, 0.333);
-    }
+  &:hover {
+    transition: 0.3s ease;
+    background-color: rgba(74, 74, 74, 0.333);
+  }
 }
 
+.projects-cards {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  padding: 2rem;
+  width: 3rem;
+  height: 3em;
+  background-color: $background-secondary;
 
-.projects-cards{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    padding: 2rem;
-    width: 3rem;
-    height: 3em;
-    background-color: $background-secondary;
+  @include tablet {
+    width: 3.5rem;
+    height: 3.5rem;
+  }
 
-    @include tablet{
-        width: 4rem;
-        height: 4rem;
+  @include desktop {
+    width: 4rem;
+    height: 4rem;
+  }
+
+  &__logo {
+    width: 2.5rem;
+    height: 2.5rem;
+
+    @include desktop {
+      width: 3rem;
+      height: 3rem;
     }
+  }
 
-    @include desktop{
-        width: 5rem;
-        height: 5rem;
-    }
-
-    &__logo{
-        width: 3rem;
-        height: 3rem;
-    
-        @include desktop{
-            width: 3.5rem;
-            height: 3.5rem;
-        }
-    }
-
-    &:hover{
-        transition: 0.3s ease;
-        background-color: rgba(74, 74, 74, 0.333);
-    }
+  &:hover {
+    transition: 0.3s ease;
+    background-color: rgba(74, 74, 74, 0.333);
+  }
 }
